--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.LoginVespertinoFB"
         tools:targetApi="31">
         <activity
+            android:name=".ChangePassActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegistroActivity"
+            android:exported="false" />
+        <activity
             android:name=".PostLogin"
             android:exported="false" />
         <activity
